tests/NormalTests/paczka1/small_fuzzy/35597169.err
Error in line 1: DyM4AF S405 28,0
Error in line 4: cPV A674 53,5
